--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Flask==2.2.5
 Werkzeug==2.2.3
 Jinja2==3.1.2
-SQLAlchemy==2.0.22
+SQLAlchemy==2.0.36
 python-dateutil==2.8.2
 icalendar==4.0.0
 requests==2.31.0
 stripe==5.0.0
 gunicorn==20.1.0
+typing_extensions>=4.12.2
