--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
 Flask==2.2.5
 Werkzeug==2.2.3
 Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.7
+
 SQLAlchemy==2.0.36
 python-dateutil==2.8.2
-icalendar==4.0.0
-requests==2.31.0
+
+# iCal parsing & HTTP
+icalendar==5.0.12
+requests==2.32.3
+
+# Payments
 stripe==5.0.0
-gunicorn==20.1.0
+
+# Prod server
+gunicorn==21.2.0
+
+# Optional (kept for compatibility if any code or future snippet uses it)
+ics==0.7
+
+# Typing helpers
 typing_extensions>=4.12.2
