--- a/render.yaml
+++ b/render.yaml
@@ -3,19 +3,57 @@ services:
     name: ravuricoltd-channelmanager-ui
     env: python
     plan: free
+
     buildCommand: |
       pip install -r requirements.txt
       python backend/import_properties.py backend/ota_properties_prefilled.csv
       npm ci --prefix frontend
       npm run build --prefix frontend
       mkdir -p backend/static/app && cp -r frontend/dist/* backend/static/app/
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT backend.server:app
+
+    startCommand: gunicorn -w 1 -k gthread --threads 8 --timeout 120 --keep-alive 5 --chdir backend server:app
+
     envVars:
+      # --- REQUIRED (set values in Render dashboard, not in git) ---
+      - key: SECRET_KEY
+        value: change_me_in_dashboard
       - key: ADMIN_EMAIL
         value: pradeep@ravuricoltd.com
       - key: ADMIN_PASSWORD
-        value: ChangeMe123!
-      - key: STRIPE_SECRET_KEY
-        value: sk_test_4eC39HqLyjWDarjtT1zdp7dc
+        # set a new strong password in the Render UI after deploy
+        value: change_me_in_dashboard
+      - key: APP_LANG_DEFAULT
+        value: en
       - key: TZ
         value: Asia/Bangkok
+      - key: WEB_CONCURRENCY
+        value: "1"
+
+      # Stripe (TEST keys first)
+      - key: STRIPE_SECRET_KEY
+        value: sk_test_change_me_in_dashboard
+      - key: STRIPE_PUBLISHABLE_KEY
+        value: pk_test_change_me_in_dashboard
+
+      # SQLite on persistent disk (see disk section below)
+      - key: DATABASE_URL
+        value: sqlite:////var/data/channel_manager.db
+
+      # --- OPTIONAL: email alerts (only if you configured SMTP) ---
+      # - key: SMTP_SERVER
+      #   value: smtp.yourhost.com
+      # - key: SMTP_PORT
+      #   value: "587"
+      # - key: SMTP_USER
+      #   value: noreply@yourdomain.com
+      # - key: SMTP_PASSWORD
+      #   value: change_me_in_dashboard
+      # - key: ALERT_TO
+      #   value: you@yourdomain.com
+
+    # Attach a persistent disk so your SQLite DB survives restarts
+    # If your plan doesn't support disks via YAML, create it in the Render UI.
+    disk:
+      name: data
+      mountPath: /var/data
+      sizeGB: 1
