--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,11 @@ stripe==5.0.0
 # Prod server
 gunicorn==21.2.0
 
-# Optional (kept for compatibility if any code or future snippet uses it)
+# Optional (calendar helper; safe to keep)
 ics==0.7
 
 # Typing helpers
 typing_extensions>=4.12.2
 
-psycopg[binary]==3.1.19
+# Postgres driver for SQLAlchemy (Python 3.13 compatible)
+psycopg[binary]==3.2.4
